--- a/Interest of App Stores Users.ipynb
+++ b/Interest of App Stores Users.ipynb
@@ -39,8 +39,8 @@
    "outputs": [],
    "source": [
     "from csv import reader\n",
-    "opened_file1= open(\"C:\\\\Users\\\\user\\\\Desktop\\\\proje 1\\\\googleplaystore.csv\", encoding=\"utf8\")\n",
-    "opened_file2= open(\"C:\\\\Users\\\\user\\\\Desktop\\\\proje 1\\\\AppleStore.csv\", encoding=\"utf8\")\n",
+    "opened_file1= open(\"googleplaystore.csv\", encoding=\"utf8\")\n",
+    "opened_file2= open(\"AppleStore.csv\", encoding=\"utf8\")\n",
     "read_file1= reader(opened_file1)\n",
     "read_file2= reader(opened_file2)"
    ]
