--- a/Interest of App Stores Users.ipynb
+++ b/Interest of App Stores Users.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this project we have two data sets, which are obtained from App Store and Google Play Store. Our aim is understanding the interest of users on an application to determine our road map for next application projects. We will analyze the free apps which are in English. For free apps, we need to understand number of users."
+    "In this project, I have two data sets, which are obtained from Apple Store and Google Play Store. My aim is understanding the interest of users on an application. This analyze will be useful to determine our road map for next application projects. I will focus on the free apps which are in English. Basicly, I will obtain the number of users according to categories."
    ]
   },
   {
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## EXPLORING DATA SETS"
+    "## Exploring Data Sets"
    ]
   },
   {
@@ -39,8 +39,8 @@
    "outputs": [],
    "source": [
     "from csv import reader\n",
-    "opened_file1= open(\"googleplaystore.csv\", encoding=\"utf8\")\n",
-    "opened_file2= open(\"AppleStore.csv\", encoding=\"utf8\")\n",
+    "opened_file1= open(\"C:\\\\Users\\\\shyl\\\\Desktop\\\\projects\\\\dataquest projects\\\\Interest of App Stores Users\\\\googleplaystore.csv\", encoding=\"utf8\")\n",
+    "opened_file2= open(\"C:\\\\Users\\\\shyl\\\\Desktop\\\\projects\\\\dataquest projects\\\\Interest of App Stores Users\\\\AppleStore.csv\", encoding=\"utf8\")\n",
     "read_file1= reader(opened_file1)\n",
     "read_file2= reader(opened_file2)"
    ]
@@ -165,21 +165,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " We have 7197 IOS apps in this data set, and the columns. If you want to learn more details about data set, it can be found in the data set [documentation](https://www.kaggle.com/ramamet4/app-store-apple-data-set-10k-apps)"
+    "I have 7197 IOS apps in Apple Store data set, and there are 16 columns on this data set. If you want to learn more details about data set, it can be found in the data set [documentation](https://www.kaggle.com/ramamet4/app-store-apple-data-set-10k-apps)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Also, we have 10841 apps in Google Play data set. To obtain details about each column, you can use [this link](https://www.kaggle.com/lava18/google-play-store-apps)."
+    "Also, I have 10841 apps in Google Play data set and 13 columns on this data set. To obtain details about each column, you can use [this link](https://www.kaggle.com/lava18/google-play-store-apps)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CLEANING DATA SETS"
+    "## Data Wrangling"
    ]
   },
   {
@@ -193,7 +193,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before deep into analyzing data sets, we have to be sure that our data is clean. [In duscussion page](https://www.kaggle.com/lava18/google-play-store-apps/discussion) about Google Play Store data set, we see an error on [one of the discussion](https://www.kaggle.com/lava18/google-play-store-apps/discussion/66015). Let's look at this wrong data, and clean it."
+    "Before deep into analyzing data sets, I have to be sure that my data is clean. [In duscussion page](https://www.kaggle.com/lava18/google-play-store-apps/discussion) about Google Play Store data set, I see an error on [one of the discussion](https://www.kaggle.com/lava18/google-play-store-apps/discussion/66015). Let's look at this wrong data, and clean it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The entry of 10472 has missing rating value and the other entries are displaced. I will delete this entry."
    ]
   },
   {
@@ -221,7 +228,7 @@
     {
      "data": {
       "text/plain": [
-       "10840"
+       "10841"
       ]
      },
      "execution_count": 7,
@@ -230,7 +237,26 @@
     }
    ],
    "source": [
-    "len(android)\n",
+    "len(android)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10840"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "del (android[10472])\n",
     "len(android)"
    ]
@@ -246,12 +272,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we have 10840 apps to analyze in Google App Store data set. But, we can see that there are some duplicate apps, which can effect to our analyze wrongly. You can see this fact from apps which name is \"Instagram\" below, as an example. "
+    "Now, I have 10840 apps to analyze in Google App Store data set. However, we can see that there are some duplicate entries in the data sets which can effect to our analyze wrongly. You can see this fact from apps which name is \"Instagram\" below, as an example. I will clean these extra entries."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -339,12 +365,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have 2 duplicate apps in App Store data set and 1181 duplicate apps in Google Play Store. Let's clean exstra apps."
+    "I have 2 duplicate entries in Apple Store data set and 1181 duplicate entries in Google Play Store. Let's clean them."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -395,12 +421,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we have to decide how we can select the true app from this duplicate apps. Actually, we can select the app which has more reviews. Because, the high review can show the last correction on app data."
+    "Now, I have to decide how I can select the true entry from this duplicate entries. Actually, I can select the entry which has more reviews. Because, the high review can show the last situation on the app data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +468,7 @@
     }
    ],
    "source": [
-    "#Show the amount of the maximum rewievs for duplicate apps in App Store data set\n",
+    "#Show the amount of the maximum rewievs for duplicate apps in Apple Store data set\n",
     "user_max={}\n",
     "for app in ios:\n",
     "    name= app[1]\n",
@@ -459,12 +485,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When we evaluate the results, we see that it is compatible with the data we expect. We can use this method to get rid of repeated apps."
+    "When I evaluate the results, I see that it is compatible with the data we expect. I can use this method to get rid of repeated apps."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -609,33 +635,13 @@
        "True"
       ]
      },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "english_detector('Instagram')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
      "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "english_detector('爱奇艺PPS -《欢乐颂2》电视剧热播')"
+    "english_detector('Instagram')"
    ]
   },
   {
@@ -655,7 +661,7 @@
     }
    ],
    "source": [
-    "english_detector('Docs To Go™ Free Office Suite')"
+    "english_detector('爱奇艺PPS -《欢乐颂2》电视剧热播')"
    ]
   },
   {
@@ -675,7 +681,7 @@
     }
    ],
    "source": [
-    "english_detector('Instachat 😜')"
+    "english_detector('Docs To Go™ Free Office Suite')"
    ]
   },
   {
@@ -686,10 +692,30 @@
     {
      "data": {
       "text/plain": [
-       "128540"
+       "False"
       ]
      },
      "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "english_detector('Instachat 😜')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "128540"
+      ]
+     },
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,26 +753,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "is_english('Docs To Go™ Free Office Suite')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [
@@ -762,7 +768,7 @@
     }
    ],
    "source": [
-    "is_english('Instachat 😜')"
+    "is_english('Docs To Go™ Free Office Suite')"
    ]
   },
   {
@@ -773,10 +779,30 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
      "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_english('Instachat 😜')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {
     "scrolled": false
    },
@@ -1218,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1381,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1453,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##FINDING MOST POPULAR APPS ACCORDING TO CATEGORIES ON GOOGLE PLAY STORE"
+    "## FINDING MOST POPULAR APPS ACCORDING TO CATEGORIES ON GOOGLE PLAY STORE"
    ]
   },
   {
@@ -1439,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1483,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1554,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1822,7 +1848,13 @@
       "Lite for Facebook Messenger : 1,000,000+\n",
       "FC Browser - Focus Privacy Browser : 1,000+\n",
       "EHiN-FH conferenceapp : 100+\n",
-      "Carpooling FH Hagenberg : 100+\n",
+      "Carpooling FH Hagenberg : 100+\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Wi-Fi Auto-connect : 1,000,000+\n",
       "Talkie - Wi-Fi Calling, Chats, File Sharing : 500,000+\n",
       "WeFi - Free Fast WiFi Connect & Find Wi-Fi Map : 1,000,000+\n",
@@ -1867,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1923,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1932,7 +1964,7 @@
        "3603485.3884615386"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1961,7 +1993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2176,7 +2208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2224,7 +2256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
