--- a/Interest of App Stores Users.ipynb
+++ b/Interest of App Stores Users.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this project, I have two data sets, which are obtained from Apple Store and Google Play Store. My aim is understanding the interest of users on an application. This analyze will be useful to determine our road map for next application projects. I will focus on the free apps which are in English. Basicly, I will obtain the number of users according to categories."
+    "In this project, I have two data sets, which are obtained from Apple Store and Google Play Store. My aim is understanding the interest of users on an application. This analyze will be useful to determine our road map for next application projects. I will focus on the free apps which are English named. Basicly, I will obtain the number of users according to categories."
    ]
   },
   {
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exploring Data Sets"
+    "## Opening Data Sets"
    ]
   },
   {
@@ -421,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, I have to decide how I can select the true entry from this duplicate entries. Actually, I can select the entry which has more reviews. Because, the high review can show the last situation on the app data."
+    "Now, I have to decide how I can select the true entry from these duplicate entries. Actually, I can select the entry which has more reviews. Because, the high review can show the last situation on the app data."
    ]
   },
   {
@@ -485,7 +485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When I evaluate the results, I see that it is compatible with the data we expect. I can use this method to get rid of repeated apps."
+    "When I evaluate the results, I see that selecting the maximum reviewed entries is compatible with the data I expect. I can use this method to get rid of repeated apps."
    ]
   },
   {
@@ -552,13 +552,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this step we found the data which is cleaned from duplicates."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Cleaning Non-English Apps Data"
    ]
   },
@@ -566,7 +559,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our plan is to make decision on apps which is in English. However we have non-English apps, and we should get rid of this apps to analyze correctly. You can find some examples: "
+    "My plan is to make decision on apps while using English named apps. However, there are non-English named apps. I should get rid of this apps to analyze to reach my goal. You can find some example of non-English named apps below: "
    ]
   },
   {
@@ -603,7 +596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For English alphabet, we know that, they have ASCII values which are from 0 to 127. So, we can use this information to detect apps in English."
+    "For English alphabet, they have ASCII values which are from 0 to 127. So, we can use this information to detect apps in English. I will create a function to find English alphabet's characters."
    ]
   },
   {
@@ -728,7 +721,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Right now, we have a problem. We never accept the special characters in first function. However, there are some apps in English, although they have special character, as above. So, we should put in mind these characters to hinder data loss.And we should develop our function according to these special characters."
+    "I created a function. Right now, I have a problem. I never accept the special characters in first function. However, there are some apps in English, although they have special character, as above. So, we should put in mind these characters to hinder data loss. I should develop the function according to these special characters."
    ]
   },
   {
@@ -815,7 +808,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "No longer, we can use the function on our data sets to get apps in English. It is not a perfect selection, but useful fot proper analyze. "
+    "No longer, I can use the function on my data sets to get English named apps. It is not a perfect selection, but useful for proper analyze. "
    ]
   },
   {
@@ -912,14 +905,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SEPERATE FREE APPS"
+    "## Seperating Free Apps"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our plan is in this project analyze the free apps to use in our next projects. So, we need to seperate the free apps from out core data sets. We will obtain our last data set to analyze. "
+    "My plan is in this project analyze the free apps to use in my next projects. So, I need to seperate the free apps from the core data sets. I will obtain the last data set to analyze. "
    ]
   },
   {
@@ -962,21 +955,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ANALYZE DATA SETS TO DECISION"
+    "## Analayze Data Sets to Decision"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we have our final data sets. With these data sets, we can understand the interest of users. Our final goal is to find proper app profile which is succesful in two platforms."
+    "I have my final data sets, right now. With these data sets, I can understand the interest of users. My final goal is to find proper app profile which is succesful in two platforms. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After this part, we can start with calculating the frequencies different types of the apps."
+    "After this part, I can start with calculating the frequencies different types of the apps."
    ]
   },
   {
@@ -1057,7 +1050,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the help of the column names above, we can start examining the distributions.\n",
+    "With the help of the column names above, I can start examining the distributions.\n",
     "<br>\n",
     "### Genres\n",
     "<br>\n",
@@ -1107,7 +1100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we want to talk about App Store apps, we see that the genre of 'Games' has a big interest, that is 58%. The second genre is 'Entertainment', that is 7.8%. And the third one is 'Photo& Video',that is 4.9%. Also, there are more application that they has close frequencies to each other.  "
+    "If we want to talk about App Store apps, I see that the genre of 'Games' has a big interest, that is 58%. The second genre is 'Entertainment', that is 7.8%. The third one is 'Photo& Video',that is 4.9%. Also, there are more application that they has close frequencies to each other.  "
    ]
   },
   {
@@ -1295,21 +1288,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is interesting results in Google Play, we can not see the apps at the top of the apps which is made for 'game' or 'entertainment'. But these catogories close to top. Trying to analyze the app profiles from Google Play store with using the genres to analyze can be complicated, because the genres are much granular. To obtain a general results we will use categories.   "
+    "There is interesting results in Google Play, I can not see the apps at the top of the apps which is made for 'game' or 'entertainment'. But these catogories close to top. Trying to analyze the app profiles from Google Play store with using the genres to analyze can be complicated, because the genres are much granular. To obtain a general results I will use categories.   "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## FINDING MOST POPULAR APPS ACCORDING TO GENRES ON APP STORE"
+    "## Finding Most Popular Apps According to Genres on Apple Store "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we are close to our aim. We can find the most popular apps to understand interest of users. We will use frequency table again, it will show us our target genre and we will see most popular apps in App Store data set. "
+    "Now, I am close to my aim. I can find the most popular apps to understand interest of users. I will use frequency table again, it will show the target genre and I will see most popular apps in Apple Store data set. "
    ]
   },
   {
@@ -1368,7 +1361,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that 'Navigation' has the highest number of user ratings."
+    "I see that 'Navigation' has the highest number of user ratings."
    ]
   },
   {
@@ -1453,14 +1446,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## FINDING MOST POPULAR APPS ACCORDING TO CATEGORIES ON GOOGLE PLAY STORE"
+    "## Finding Most Popular Apps According to Categories on Google Play Store"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have number of installs to use. However, this data is not precise to calculate."
+    "I have number of installs to use in \"Installs\" column. However, this data is not precise to calculate."
    ]
   },
   {
@@ -1504,7 +1497,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can start with cleaning this data to make it precise and calculate the average number of the categories."
+    "I can start with cleaning this data to make it precise and calculate the average number of the categories."
    ]
   },
   {
@@ -1575,7 +1568,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "'Communication' category has the highest number of installs."
+    "I cleaned entries to calculate frequencies. According to results, 'Communication' category has the highest number of installs."
    ]
   },
   {
@@ -1894,7 +1887,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are a lot of application under the communication category. We can select the most popular ones. "
+    "There are a lot of application under the communication category. I will select the most popular ones. "
    ]
   },
   {
@@ -1950,7 +1943,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we ignore the communication apps which have installs over 100 million, the average will reduce roughly ten times:"
+    "If I ignore the communication apps which have installs over 100 million, the average will reduce roughly ten times. I should ignore them. Because these apps are extraordinary and distract me from consistent result."
    ]
   },
   {
@@ -1988,7 +1981,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This average is more proper for us, because it is to difficult to compete with popular communication apps for a new application project. The second category is 'BOOKS_AND_REFERENCE' which has high number of installs."
+    "This average is more proper for me, because it is to difficult to compete with popular communication apps for a new application project. The second category is 'BOOKS_AND_REFERENCE' which has high number of installs."
    ]
   },
   {
@@ -2203,7 +2196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, there are some apps which has 100,000,000 and more installs."
+    "As you can see, there are some apps which have 100,000,000 and more installs."
    ]
   },
   {
@@ -2236,7 +2229,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is not too much insuperable apps in this field than communication apps. When we check the number of installs, we can see that the users have interest to install book & reference apps. "
+    "There are not too much insuperable apps in \"BOOKS_AND_REFERENCE\" category like communication apps."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I checked the categories to understand users' interest while creating frequency tables. The \"COMMUNICATION\" category has the highest installation rates. When I check the number of installs, I can say that the users have interest to install book & reference apps. "
    ]
   }
  ],
